[www.hlidacshopu.cz] Fixed broken links

--- a/www.hlidacshopu.cz/src/html/dashboard/index.html
+++ b/www.hlidacshopu.cz/src/html/dashboard/index.html
@@ -137,7 +137,7 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item">OVĚŘIT VÝVOJ CENY</li>
+            <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
             <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
             <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
@@ -479,12 +479,12 @@
       </div>
 
       <div
-        class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <span>© 2019, TopMonks, Apify, Keboola</span>
+        class="company mdc-layout-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <span>© 2019 TopMonks, Apify, Keboola</span>
       </div>
       <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <a href="osobni-udaje">Zásady Ochrany Osobních Údajů</a>
+        class="terms mdc-layout-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+        <a href="/osobni-udaje">Zásady Ochrany Osobních Údajů</a>
       </div>
     </div>
   </div>
