--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -135,7 +135,7 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+            <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
             <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
             <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
