--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -138,7 +138,7 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+            <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
             <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
             <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
@@ -207,14 +207,14 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--press">Tisková zpráva</span>
             </div>
           </div>
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
@@ -234,7 +234,7 @@
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
@@ -254,7 +254,7 @@
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
@@ -267,13 +267,13 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
             </div>
           </div>
           <div
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
@@ -289,14 +289,14 @@
           <div
             class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
           </div>
           <div
             class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
@@ -304,7 +304,7 @@
           <div
             class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone  mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
@@ -425,7 +425,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
         <h3>NAVIGACE</h3>
         <ul>
-          <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+          <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
           <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
           <li class="list_item"><a href="/media">MÉDIA</a></li>
         </ul>
@@ -448,11 +448,11 @@
 
       <div
         class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <span>© 2019, TopMonks, Apify, Keboola</span>
+        <span>© 2019 TopMonks, Apify, Keboola</span>
       </div>
       <div
         class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <a href="osobni-udaje">Zásady Ochrany Osobních Údajů</a>
+        <a href="/osobni-udaje">Zásady Ochrany Osobních Údajů</a>
       </div>
     </div>
   </div>
