--- a/www.hlidacshopu.cz/src/html/osobni-udaje/index.html
+++ b/www.hlidacshopu.cz/src/html/osobni-udaje/index.html
@@ -171,7 +171,7 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+            <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
             <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
             <li class="list_item"><a href="/media">MÉDIA</a></li>
           </ul>
@@ -240,8 +240,9 @@
         <ol>
           <li>Pro potřeby těchto Zásad se rozumí:</li>
           <ul>
-            <li class="list--letter"><b>Provozovatelem</b> firmy <a href="">Apify</a>, <a href="">Keboola</a> a <a
-                href="">TopMonks</a>.
+            <li class="list--letter"><b>Provozovatelem</b> firmy <a href="https://apify.com/">Apify</a>,
+                <a href="https://www.keboola.com/">Keboola</a> a
+                <a href="https://www.topmonks.com/">TopMonks</a>.
             </li>
             <li class="list--letter"><b>Osobními údaji</b> např. jméno a příjmení, adresa bydliště, emailová
               adresa, telefonní číslo, identifikační číslo podnikající fyzické osoby a daňové identifikační číslo
@@ -317,7 +318,7 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3">
         <h3>NAVIGACE</h3>
         <ul>
-          <li class="list_item"><a href="">OVĚŘIT VÝVOJ CENY</a></li>
+          <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
           <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
           <li class="list_item"><a href="/media">MÉDIA</a></li>
         </ul>
