[www.hlidacshopu.cz] Fixed code and links on media page

--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -198,21 +198,21 @@
 </header>
 
 <body>
-<section class="media">
+<article class="media">
   <div class="mdc-layout-grid">
     <div class="layout-wrapper">
       <h2 class="media-heading">Média</h2>
       <section class="media-article-list layout-wrapper">
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
               <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--press">Tisková zpráva</span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -225,14 +225,14 @@
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -245,14 +245,14 @@
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -265,13 +265,13 @@
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
               <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -287,14 +287,14 @@
       <section class="media-press-grid layout-wrapper">
         <div class="mdc-layout-grid__inner">
           <div
-            class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+            class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět&nbsp;…
             </div>
           </div>
           <div
-            class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop">
+            class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -302,7 +302,7 @@
             </div>
           </div>
           <div
-            class="media-press-grid__cell mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone  mdc-layout-grid__cell--span-4-desktop">
+            class="media-press-grid__cell mdc-layout-grid__cell  mdc-layout-grid__cell--span-4-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
             <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
@@ -319,18 +319,18 @@
       <section class="media-article-list layout-wrapper">
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--press">
                 Tisková zpráva
               </span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
@@ -341,64 +341,64 @@
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">
                 Napsali o nás
               </span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">
                 Napsali o nás
               </span>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
         <div class="media-article-item mdc-layout-grid__inner">
           <div
-            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
+            class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="../../images/black-friday-slevy-e-commerce-1-prev%201.png" alt="clanek"/>
+              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
             </div>
           </div>
           <div
-            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
+            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Black Friday po česku: kouzla se slevami po roce</h3>
-            <p class="media__date">10.prosince 2019</p>
+            <p class="media__date">10. prosince 2019</p>
             <div class="media__description">
               Po loňské úspěšné analýze slev v&nbsp;rámci Black Friday jsme se opět
               rozhodli podívat na to, jak největší české e-shopy pracují s&nbsp;tímto
               fenoménem. Hlavně nás zajímalo, zda stále čarují se slevami, převážně
-              pomocí umělého navyšování původních cen&nbsp;…
+              pomocí umělého navyšování původních cen…
             </div>
           </div>
         </div>
@@ -409,10 +409,7 @@
       </section>
     </div>
   </div>
-</section>
-
-
-</body>
+</article>
 <footer>
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
@@ -426,8 +423,8 @@
         <h3>NAVIGACE</h3>
         <ul>
           <li class="list_item"><a href="/">OVĚŘIT VÝVOJ CENY</a></li>
-          <li class="list_item"><a href="/proc-to-delame">PROČ TO DĚLÁME</a></li>
-          <li class="list_item"><a href="/media">MÉDIA</a></li>
+          <li class="list_item"><a href="/proc-to-delame/">PROČ TO DĚLÁME</a></li>
+          <li class="list_item"><a href="/media/">MÉDIA</a></li>
         </ul>
       </div>
       <div class="logo-box mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
@@ -447,12 +444,12 @@
       </div>
 
       <div
-        class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <span>© 2019 TopMonks, Apify, Keboola</span>
       </div>
       <div
-        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <a href="/osobni-udaje">Zásady Ochrany Osobních Údajů</a>
+        class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <a href="/osobni-udaje/">Zásady Ochrany Osobních Údajů</a>
       </div>
     </div>
   </div>
