--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -405,6 +405,9 @@
       </section>
       <section class="media-next-articles">
         <div class="mdc-layout-grid__inner">
+          <div class="mdc-layout-grid__cell--span-12">
+            <button >10 dalších článků...</button>
+          </div>
         </div>
       </section>
     </div>
