--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -1,5 +1,6 @@
 {% extends 'layouts/master.html' %}
 {% block title %}Hlídač shopů{% endblock %}
+{% from 'layouts/helpers.html' import sprite %}
 
 {% block main %}
 <section class="main">
@@ -30,19 +31,57 @@
 
           <h2 class="sub-title">AKTUÁLNĚ MONITORUJEME TYTO ESHOPY</h2>
           <div class="logos mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-            <a href="https://www.alza.cz/"><img alt="Barevné Logo Alza.cz" src="/images/logos/alza_logo.svg" height="24"></a>
-            <a href="https://www.czc.cz/"><img alt="Barevné Logo CZC.cz" src="/images/logos/czc.cz_logo.svg"></a>
-            <a href="https://www.datart.cz/"><img alt="Barevné Logo Datart" src="/images/logos/datart_logo.svg"></a>
-            <a href="https://www.itesco.cz/"><img alt="Barevné Logo Tesco" src="/images/logos/tesco_logo.svg"></a>
-            <a href="https://www.kasa.cz/"><img alt="Barevné Logo Kasa.cz" src="/images/logos/kasa_logo.svg"></a>
-            <a href="https://www.kosik.cz/"><img alt="Barevné Logo Košík.cz" src="/images/logos/kosik_logo.svg"></a>
-            <a href="https://www.lekarna.cz/"><img alt="Barevné Logo Lékárna.cz" src="/images/logos/lekarna_logo.svg"></a>
-            <a href="https://www.mountfield.cz/"><img alt="Barevné Logo Mountfield" src="/images/logos/mountfield_logo.svg"></a>
-            <a href="https://www.notino.cz/"><img alt="Barevné Logo Notino" src="/images/logos/notino_logo.svg"></a>
-            <a href="https://www.rohlik.cz/"><img alt="Barevné Logo Rohlik.cz" src="/images/logos/rohlik_logo.svg"></a>
-            <a href="https://www.tsbohemia.cz/"><img alt="Barevné Logo TSBohemia"  src="/images/logos/tsbohemia_logo.svg"></a>
-            <a href="https://www.mironet.cz/"><img alt="Barevné Logo Mironet" src="/images/logos/mironet_logo.svg"></a>
-            <a href="https://www.mall.cz/"><img alt="Barevné Logo Mall.cz" src="/images/logos/mall_logo.svg"></a>
+            <a href="https://www.alza.cz/">
+              {{sprite('alza_logo', '[logo] Alza')}}
+<!--              <img alt="Barevné Logo Alza.cz" src="/images/logos/alza_logo.svg" height="24">-->
+            </a>
+            <a href="https://www.czc.cz/">
+              {{sprite('czc.cz_logo', '[logo] CZC')}}
+<!--              <img alt="Barevné Logo CZC.cz" src="/images/logos/czc.cz_logo.svg">-->
+            </a>
+            <a href="https://www.datart.cz/">
+              {{sprite('datart_logo', '[logo] Datart')}}
+<!--              <img alt="Barevné Logo Datart" src="/images/logos/datart_logo.svg">-->
+            </a>
+            <a href="https://www.itesco.cz/">
+              {{sprite('tesco_logo', '[logo] Tesco')}}
+<!--              <img alt="Barevné Logo Tesco" src="/images/logos/tesco_logo.svg">-->
+            </a>
+            <a href="https://www.kasa.cz/">
+              {{sprite('kasa-logo', '[logo] kasa.cz')}}
+<!--              <img alt="Barevné Logo Kasa.cz" src="/images/logos/kasa_logo.svg">-->
+            </a>
+            <a href="https://www.kosik.cz/">
+              {{sprite('kosik_logo', '[logo] kosik.cz')}}
+<!--              <img alt="Barevné Logo Košík.cz" src="/images/logos/kosik_logo.svg">-->
+            </a>
+            <a href="https://www.lekarna.cz/">
+              {{sprite('lekarna_logo', '[logo] lekarna.cz')}}
+<!--              <img alt="Barevné Logo Lékárna.cz" src="/images/logos/lekarna_logo.svg">-->
+            </a>
+            <a href="https://www.mountfield.cz/">
+              {{sprite('mountfield-logo', '[logo] Mountfield')}}
+<!--              <img alt="Barevné Logo Mountfield" src="/images/logos/mountfield_logo.svg">-->
+            </a>
+            <a href="https://www.notino.cz/">
+              {{sprite('notino_logo', '[logo] Notino')}}
+<!--              <img alt="Barevné Logo Notino" src="/images/logos/notino_logo.svg">-->
+            </a>
+            <a href="https://www.rohlik.cz/">
+              {{sprite('rohlik_logo', '[logo] rohlik.cz')}}
+<!--              <img alt="Barevné Logo Rohlik.cz" src="/images/logos/rohlik_logo.svg">-->
+            </a>
+            <a href="https://www.tsbohemia.cz/">
+              {{sprite('tsbohemia_logo', '[logo] TSBohemia')}}
+<!--              <img alt="Barevné Logo TSBohemia"  src="/images/logos/tsbohemia_logo.svg">-->
+            </a>
+            <a href="https://www.mironet.cz/">
+              <img alt="Barevné Logo Mironet" src="/images/logos/mironet-logo.svg">
+            </a>
+            <a href="https://www.mall.cz/">
+              {{sprite('mall_logo', '[logo] mall.cz')}}
+<!--              <img alt="Barevné Logo Mall.cz" src="/images/logos/mall_logo.svg">-->
+            </a>
           </div>
         </form>
       </div>
