--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -76,7 +76,7 @@
 <!--              <img alt="Barevné Logo TSBohemia"  src="/images/logos/tsbohemia_logo.svg">-->
             </a>
             <a href="https://www.mironet.cz/">
-              <img alt="Barevné Logo Mironet" src="/images/logos/mironet-logo.svg">
+              <img class="shops" alt="Barevné Logo Mironet" src="/images/logos/mironet-logo.svg">
             </a>
             <a href="https://www.mall.cz/">
               {{sprite('mall_logo', '[logo] mall.cz')}}
